--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,12 @@
+name: Node Continuous integration
 on: push
 jobs:
   first-job:
+    name: Build Node
     runs-on: ubuntu-latest
     container: node:17.6.0
     steps:
-      - run: node --version
-      - run: npm --version
+      - name: Check node version
+        run: node --version
+      - name: Check npm version
+        run: npm --version
