--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,5 @@ jobs:
         run: node --version
       - name: Check npm version
         run: npm --version
+      - name: install npm
+        run: npm install
