--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,5 @@ jobs:
         run: node --version
       - name: Check npm version
         run: npm --version
-      - run: actions/checkout@v2
+      - uses: actions/checkout@v2
       - run: dir
-      - name: install npm
-        run: npm install
