--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Check npm version
         run: npm --version
       - uses: actions/checkout@v2
-      - run: dir
+      - run: npm install
