--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ on: push
 jobs:
   first-job:
     name: Build Node
-    # runs-on: ubuntu-latest
-    runs-on: alpine:3.10
+    runs-on: ubuntu-latest
+    # runs-on: alpine:3.10
     container: node:17.6.0
     steps:
       - name: Check node version
